fix flex tech icons wrap

--- a/src/components/UI/TechIcon/TechIcon.module.css
+++ b/src/components/UI/TechIcon/TechIcon.module.css
@@ -8,6 +8,7 @@
     cursor: pointer;
     position: relative;
     transition: all 0.3s ease-out;
+    margin-top: 10px;
     
 }
 
