--- a/src/container/Projects/Project/Project.module.css
+++ b/src/container/Projects/Project/Project.module.css
@@ -26,6 +26,7 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+    flex-wrap: wrap;
     
 
 }
